@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. 1.0.24 November 8, 2011
 
+* update gem 'omniauth' from 0.3.2 to 1.0.0 (and update recipe)
 * use mongoid 2.3.3 (works with bson_ext 1.3.1)
 * update gem 'cucumber-rails' from 1.1.1 to 1.2.0
 * update gem 'rspec-rails' from 2.7.0 to 2.8.0.rc1
